--- a/.github/workflows/auto-tag.yml
+++ b/.github/workflows/auto-tag.yml
@@ -37,10 +37,6 @@ jobs:
           fetch-depth: 0 # Required for tag history
           token: ${{ secrets.GITHUB_TOKEN }} # Use provided token for writes
 
-      # If you use upload-artifact elsewhere, add this step before using it:
-      # - name: Download upload-artifact action
-      #   uses: actions/upload-artifact@v3
-
       - name: Set Git User
         run: |
           git config --local user.email "github-actions[bot]@users.noreply.github.com"
@@ -89,22 +85,16 @@ jobs:
           echo "increment=$INCREMENT_TYPE" >> $GITHUB_OUTPUT
         shell: bash
 
-      # --- RUST-BASED SEMVER CALCULATION ---
       - name: Install Rust stable toolchain
-        uses: dtolnay/rust-toolchain@stable
+        uses: dtolnay/rust-toolchain@v1
         with:
           toolchain: "1.86.0"
 
       - name: Install Rust semver-tool
         run: |
-          set -euo pipefail
           if ! command -v semver-tool >/dev/null 2>&1; then
-            echo "Installing semver-tool..."
             cargo install semver-tool --locked
-          else
-            echo "semver-tool already installed"
           fi
-        shell: bash
 
       - name: Calculate new version using semver-tool
         id: new_version
@@ -127,45 +117,7 @@ jobs:
             exit 1
           fi
 
-          # Check semver-tool command structure and adapt accordingly
-          if semver-tool --help | grep -q "USAGE:.*semver-tool \[SUBCOMMAND\]"; then
-            # New style semver-tool
-            if semver-tool help | grep -q "bump"; then
-              NEW_VERSION=$(semver-tool bump "$INCREMENT" "$LATEST_VERSION_NUM")
-            else
-              # Try to determine the right subcommand
-              PROPER_CMD=$(semver-tool help | grep -E "increment|bump|inc" | head -1 | awk '{print $1}')
-              if [ -n "$PROPER_CMD" ]; then
-                NEW_VERSION=$(semver-tool "$PROPER_CMD" "$INCREMENT" "$LATEST_VERSION_NUM")
-              else
-                echo "::error::Could not determine the proper semver-tool command to bump version"
-                exit 1
-              fi
-            fi
-          else
-            # Try traditional semver format as fallback
-            if command -v semver >/dev/null 2>&1; then
-              NEW_VERSION=$(semver bump "$INCREMENT" "$LATEST_VERSION_NUM")
-            else
-              # Last resort - calculate version manually
-              echo "::warning::semver-tool command structure not recognized, calculating version manually"
-              case "$INCREMENT" in
-                patch)
-                  IFS='.' read -r major minor patch <<< "$LATEST_VERSION_NUM"
-                  NEW_VERSION="$major.$minor.$((patch + 1))"
-                  ;;
-                minor)
-                  IFS='.' read -r major minor patch <<< "$LATEST_VERSION_NUM"
-                  NEW_VERSION="$major.$((minor + 1)).0"
-                  ;;
-                major)
-                  IFS='.' read -r major minor patch <<< "$LATEST_VERSION_NUM"
-                  NEW_VERSION="$((major + 1)).0.0"
-                  ;;
-              esac
-            fi
-          fi
-
+          NEW_VERSION=$(semver-tool bump "$INCREMENT" "$LATEST_VERSION_NUM")
           if [ -z "$NEW_VERSION" ]; then
             echo "::error::Failed to bump version '$LATEST_VERSION_NUM' with increment '$INCREMENT'"
             exit 1
@@ -175,7 +127,7 @@ jobs:
           echo "new_tag=v$NEW_VERSION" >> $GITHUB_OUTPUT
           echo "::notice::Calculated new version: $NEW_VERSION (Tag: v$NEW_VERSION)"
         shell: bash
-      # --- END RUST-BASED SEMVER ---
+
       - name: Check if tag already exists
         id: check_tag_exists
         run: |
@@ -198,33 +150,12 @@ jobs:
           # Install cargo-edit if not available
           if ! command -v cargo-set-version >/dev/null 2>&1; then
             echo "Installing cargo-edit..."
-            rustup default stable # Ensure we're on stable for cargo-edit
-            cargo install cargo-edit --locked --version "^0.12.0" || {
-              echo "::warning::Failed to install cargo-edit, will use sed fallback"
-              CARGO_EDIT_INSTALLED=false
-            }
-            CARGO_EDIT_INSTALLED=${CARGO_EDIT_INSTALLED:-true}
-          else
-            CARGO_EDIT_INSTALLED=true
+            cargo install cargo-edit --locked --version "^0.12.0"
           fi
 
           # Use cargo-edit (if available) or sed to update versions
-          if [ "$CARGO_EDIT_INSTALLED" = "true" ]; then
-            echo "Attempting to set version using cargo set-version..."
-            if cargo set-version --workspace "$NEW_VERSION"; then
-               echo "::notice::Successfully set version for workspace members using 'cargo set-version --workspace'."
-               CARGO_EDIT_FAILED=false
-            else
-               echo "::warning::'cargo set-version --workspace' failed or no workspace members found inheriting version. Falling back to manual sed."
-               CARGO_EDIT_FAILED=true
-            fi
-          else
-            CARGO_EDIT_FAILED=true
-          fi
-
-          # Fallback/alternative: Manual find and sed (handle workspace.package too)
-          if [ "${CARGO_EDIT_FAILED:-true}" = "true" ]; then
-            echo "Using sed to update versions in Cargo.toml files..."
+          if ! cargo set-version --workspace "$NEW_VERSION"; then
+            echo "::warning::'cargo set-version --workspace' failed or no workspace members found inheriting version. Falling back to manual sed."
             find . -path ./target -prune -o -name Cargo.toml -print | while read -r toml; do
               if grep -q '^version\s*=\s*"[^"]*"' "$toml" && ! grep -q '\[workspace\]' "$toml"; then # Avoid top-level workspace file here
                 sed -i -E "s/^version\s*=\s*\"[^\"]*\"/version = \"$NEW_VERSION\"/" "$toml"
@@ -250,10 +181,7 @@ jobs:
           else
             git add . # Add all changes (like updated Cargo.toml files)
             git commit -m "chore: bump version to $NEW_VERSION [skip ci]"
-            git push || {
-              echo "::error::Failed to push version changes to repository. Please check your permissions."
-              exit 1
-            }
+            git push
             echo "::notice::Committed and pushed version updates"
           fi
         shell: bash
@@ -264,9 +192,6 @@ jobs:
           set -euo pipefail
           NEW_TAG="${{ steps.new_version.outputs.new_tag }}"
           git tag "$NEW_TAG" -m "Release $NEW_TAG"
-          git push origin "$NEW_TAG" || {
-            echo "::error::Failed to push tag to repository. Please check your permissions."
-            exit 1
-          }
+          git push origin "$NEW_TAG"
           echo "::notice::Created and pushed tag $NEW_TAG"
         shell: bash
