--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -2,7 +2,7 @@
 name: CI
 
 permissions:
-  contents: read # Needed to checkout the code
+  contents: read
 
 on:
   push:
@@ -11,7 +11,6 @@ on:
     branches: [main]
   workflow_dispatch:
 
-# Cancel redundant runs on PRs, but let pushes to main complete
 concurrency:
   group: ${{ github.workflow }}-${{ github.ref == 'refs/heads/main' && github.sha || github.ref }}
   cancel-in-progress: ${{ github.ref != 'refs/heads/main' }}
@@ -20,8 +19,9 @@ jobs:
   test:
     name: Test Suite
     runs-on: ${{ matrix.os }}
+    continue-on-error: false
     strategy:
-      fail-fast: false # Allow all matrix jobs to finish
+      fail-fast: false
       matrix:
         os: [ubuntu-latest, macos-latest, windows-latest]
         rust: ["1.86.0"]
@@ -29,32 +29,27 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v4
 
-      - name: Install Rust toolchain (1.86.0)
-        uses: dtolnay/rust-toolchain@stable
+      - name: Install Rust toolchain
+        uses: dtolnay/rust-toolchain@v1
         with:
-          toolchain: "1.86.0"
+          toolchain: ${{ matrix.rust }}
 
       - name: Setup Rust cache
         uses: Swatinem/rust-cache@v2
 
       - name: Run tests
         run: cargo test --workspace --all-features --locked
-        shell: bash
 
   lints:
     name: Lints
     runs-on: ubuntu-latest
-    strategy:
-      matrix:
-        os: [ubuntu-latest, macos-latest]
-        rust: ["1.86.0"]
-      fail-fast: false
+    continue-on-error: false
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
 
-      - name: Install Rust toolchain (1.86.0)
-        uses: dtolnay/rust-toolchain@stable
+      - name: Install Rust toolchain
+        uses: dtolnay/rust-toolchain@v1
         with:
           toolchain: "1.86.0"
           components: rustfmt, clippy
@@ -64,27 +59,20 @@ jobs:
 
       - name: Run cargo fmt (check)
         run: cargo fmt --all -- --check
-        shell: bash
 
       - name: Run cargo clippy
-        # Add --locked to ensure lockfile is respected
         run: cargo clippy --workspace --all-targets --all-features --locked -- -D warnings
-        shell: bash
 
   docs:
     name: Docs
     runs-on: ubuntu-latest
-    strategy:
-      matrix:
-        os: [ubuntu-latest, macos-latest]
-        rust: ["1.86.0"]
-      fail-fast: false
+    continue-on-error: false
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
 
-      - name: Install Rust toolchain (1.86.0)
-        uses: dtolnay/rust-toolchain@stable
+      - name: Install Rust toolchain
+        uses: dtolnay/rust-toolchain@v1
         with:
           toolchain: "1.86.0"
 
@@ -94,7 +82,4 @@ jobs:
       - name: Check documentation compilation
         env:
           RUSTDOCFLAGS: -D warnings
-        # Add --locked
-        # Consider removing --no-deps if you want to catch doc issues in public dependencies
         run: cargo doc --workspace --no-deps --document-private-items --all-features --locked
-        shell: bash
