--- a/.github/workflows/dependencies.yml
+++ b/.github/workflows/dependencies.yml
@@ -24,39 +24,35 @@ jobs:
         uses: actions/checkout@v4
 
       - name: Install Rust stable toolchain
-        uses: dtolnay/rust-toolchain@stable
+        uses: dtolnay/rust-toolchain@v1
         with:
-          toolchain: "1.86.0"
+          toolchain: stable
 
       - name: Setup Rust cache
         uses: Swatinem/rust-cache@v2
 
-      # Install cargo-outdated just for the report
       - name: Install cargo-outdated
-        run: cargo install cargo-outdated --locked
-        shell: bash
+        run: |
+          if ! command -v cargo-outdated >/dev/null 2>&1; then
+            cargo install cargo-outdated --locked
+          fi
 
       - name: Check for outdated dependencies
         id: outdated
         run: |
           set -euo pipefail
           echo "::group::Checking for outdated dependencies"
-          # Run with --workspace if needed, capture output for PR
           OUTPUT=$(cargo outdated --workspace --exit-code 0 || echo "cargo-outdated failed")
           echo "$OUTPUT"
           echo "::endgroup::"
-          # Save output for PR body
           echo "outdated_list<<EOF" >> $GITHUB_OUTPUT
           echo "$OUTPUT" >> $GITHUB_OUTPUT
           echo "EOF" >> $GITHUB_OUTPUT
-        shell: bash
 
       - name: Update dependencies using cargo update
         run: cargo update --locked
-        shell: bash
 
       - name: Create Pull Request
-        # Use v6 which is the latest major version
         uses: peter-evans/create-pull-request@v6
         with:
           token: ${{ secrets.GITHUB_TOKEN }}
